--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "sequelize": "^6.35.2",
-    "sequelize-cli": "^6.6.2"
+    "sequelize-cli": "^6.6.2",
+    "validator": "^13.11.0"
   }
 }
