--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "path": "^0.12.7",
     "sequelize": "^6.35.2",
     "sequelize-cli": "^6.6.2",
+    "socket.io": "^4.7.4",
     "validator": "^13.11.0"
   }
 }
