--- a/frontend/react/package.json
+++ b/frontend/react/package.json
@@ -28,6 +28,7 @@
     "react-feather": "^2.0.10",
     "react-hook-form": "^7.49.3",
     "react-router-dom": "^6.21.3",
+    "socket.io-client": "^4.7.4",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
