--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,41 @@
 version: "3.8"
 services:
+  backend:
+    image: node:latest
+    container_name: backend-container
+    environment:
+      - CONFIG=development
+      - DBHOST=mysql-container
+    depends_on:
+      - mysql
+    ports: 
+      - 3000:3000
+    volumes: 
+      - ./backend:/files/backend
+    working_dir: /files/backend
+    command: npm run dev
+
+  frontend:
+    image: node:latest
+    container_name: frontend-container
+    environment:
+      - BACKENDHOST=127.0.0.1
+      - BACKENDPORT=3000
+    ports: 
+      - 5173:5173
+    volumes: 
+      - ./frontend/react:/files/frontend
+    working_dir: /files/frontend
+    command: npm run dev
+
   mysql:
     image: mysql:latest
     container_name: mysql-container
     environment:
       - MYSQL_DATABASE=tic-tac-toe
       - MYSQL_ROOT_PASSWORD=qwerty
-    ports:
-      - "3306:3306"
+    expose:
+      - "3306"
     volumes:
       - mysql-data:/var/lib/mysql
       - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
