--- a/backend/package.json
+++ b/backend/package.json
@@ -15,12 +15,14 @@
   "dependencies": {
     "amqplib": "^0.10.3",
     "bcryptjs": "^2.4.3",
+    "connect-redis": "^7.1.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
     "mysql2": "^3.6.5",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
+    "redis": "^4.6.13",
     "reflect-metadata": "^0.2.1",
     "sequelize": "^6.36.0",
     "sequelize-typescript": "^2.1.6",
