--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,8 @@ services:
         condition: service_healthy
       rabbitmq:
           condition: service_healthy
+      redis:
+          condition: service_healthy
     ports: 
       - 3000:3000
     volumes: 
@@ -68,6 +70,13 @@ services:
   redis:
     image: redis:latest
     container_name: redis-container
+    expose:
+      - 6379:6379
+    healthcheck:
+      test: ["CMD-SHELL", "redis-cli ping | grep PONG"]
+      interval: 5s
+      timeout: 3s
+      retries: 5
     
 
   mysql:
