--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - 5173:80
     volumes: 
       - ./frontend/react/dist:/usr/share/nginx/html
+      - ./dockerdata/nginx/nginx.conf:/etc/nginx/nginx.conf
     profiles:
       - production
 
